Adds some DCHECKs to help isolate flake

We seem to be getting messages when a binding is paused. The only way
this should be possible is if an associated interface has been
created. The added DCHECKs check for this.

BUG=626869
TEST=none
R=ben@chromium.org

Review-Url: https://codereview.chromium.org/2165873003
Cr-Commit-Position: refs/heads/master@{#406597}

Former-commit-id: 3383bb96a7ca62b76c9cc6b119474a023465832b